# time-series-research-radar

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_SOURCES.md  LICENSE  README.md  README.zh-CN.md  REPO_STATUS.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  dataset_update.yml  feature_request.yml
.github/workflows/: ci.yml
radar/data/conferences/ICLR/2026/: INDEX.md  README.md  papers_manifest.json
radar/data/conferences/ICML/2025/: INDEX.md  papers_manifest.json
radar/data/conferences/ICML/2026/: INDEX.md  README.md
radar/data/curated/: papers.json
radar/docs/: DOWNLOAD_POLICY.md  MAINTENANCE.md  MAINTENANCE_PLAN.md  OSS_APPLICATION_PREP.md  PROJECT_POSITIONING.md  SOURCE_POLICY.md  WORKFLOW.md
radar/docs/maintenance-log/: 2026-05-05.md
radar/outputs/: paper_index.md
radar/outputs/audits/: 2026-03-18-link-audit.md  2026-05-05-link-audit.md
radar/outputs/digests/: 2026-W11.md  2026-W19.md
radar/outputs/maps/: iclr-2026-topic-map.md
radar/outputs/papers/: iclr2026-sample-links.md
scripts/: audit_links.py  build_all_conference_indexes.py  build_conference_readme.py  build_index.py  build_topic_map.py  collect_icml2025_pmlr.py  collect_kdd2025_titles.py  conference_template.json  download_papers.py  generate_digest.py  init_workspace.py  normalize_openreview_structured_summaries.py  validate_repository.py
tests/: test_repository_contract.py
(+36 files in other folders)
